# Helloworld

./: .clang-format  .gitignore  CatchOrg.Catch.props  Hello.cppcheck  Hello.sln  PropertySheet.props  all.ruleset  gmake.sh  include  winmake.bat
GoogleManualTest/: GoogleManualTest.cpp  GoogleManualTest.vcxproj  GoogleManualTest.vcxproj.filters  Utility_test.cpp
GoogleTestAdaptor/: GoogleTestAdaptor.vcxproj
TestCatch2/: Test.cpp  TestCatch2.cpp  TestCatch2.vcxproj  TestCatch2.vcxproj.filters  fakeit.hpp
UnitTest1/: UnitTest1.vcxproj  cpp.hint  unittest1.cpp
Utility/: Utility.vcxproj  Utility.vcxproj.filters  utility.cpp  utility.h
test1/: CMakeLists.txt  Guarded.h  aggregator.h  aggregator_t.h  codeAn.cpp  details.v1.h  details.v2.h  details.v3.h  main.c  test.h  test1.cpp  test1.cppcheck  test1.vcxproj  test1.vcxproj.filters  widget.cpp
